<resources>
    <string name="app_name">SucculentShop</string>
    <string name="email_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">create an account</string>
    <string name="email_cannot_be_empty">Email or Username required</string>
    <string name="email_required">Email is required</string>
    <string name="identifier_is_too_short">Email or Username too short</string>
    <string name="password_cannot_be_empty">Paswword is required</string>
    <string name="write_email">Email </string>
    <string name="write_username">Username</string>
    <string name="required_username">Username is required</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="username_short">Username is too short.</string>
    <string name="username_long">Username is too long.</string>
    <string name="password_rules">Password must contain one digit, one uppercase letter, one lowercase letter and one special character.</string>
    <string name="username_rules">Username can only include a-z, 0-9 and _ characters.</string>
    <string name="password_short">Password is too short.</string>
    <string name="password_long">Password is too long.</string>

</resources>