<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.succulentshop.SignupActivity"
    android:padding="16dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldSignUpemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_email"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edttextSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldSignUpusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_username"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edttextSignUpusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldSignuppassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edttextSignupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/AlreadyHaveAccountButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:hint="@string/create_an_account"
        android:text="@string/already_have_an_account"
        style="@style/Widget.MaterialComponents.Button.TextButton" />
</LinearLayout>